# postured

./: .gitignore  README.md  pyproject.toml
.github/workflows/: flatpak-repo.yml
ci/: build-appimage.sh
flatpak/: io.github.vadi2.postured.metainfo.xml  io.github.vadi2.postured.yml
postured/: __init__.py  __main__.py  app.py  calibration.py  overlay.py  pose_detector.py  settings.py  tray.py
postured/resources/: postured.desktop
snap/: snapcraft.yaml
