[project]
name = "postured"
version = "1.0.0"
description = "A Linux app that dims your screen when you slouch"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "PyQt6>=6.6.0",
]

[project.scripts]
postured = "postured.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["postured"]
